--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -130,6 +130,7 @@
     <Compile Include="IHost.cs" />
     <Compile Include="IProjectSystemHelper.cs" />
     <Compile Include="IActiveSolutionTracker.cs" />
+    <Compile Include="Binding\IProjectSystemFilter.cs" />
     <Compile Include="IServiceProviderExtensions.cs" />
     <Compile Include="IIntegrationSettings.cs" />
     <Compile Include="IWebBrowser.cs" />
@@ -144,7 +145,10 @@
     <Compile Include="Persistence\ISolutionBinding.cs" />
     <Compile Include="Progress\IProgressStepRunnerWrapper.cs" />
     <Compile Include="RuleSetHelper.cs" />
+    <Compile Include="Language.cs" />
+    <Compile Include="Binding\ProjectSystemFilter.cs" />
     <Compile Include="Service\DataModel\ServerPlugin.cs" />
+    <Compile Include="Service\DataModel\ServerProperty.cs" />
     <Compile Include="Service\RoslynExporter\AdditionalFile.cs" />
     <Compile Include="Service\RoslynExporter\Configuration.cs" />
     <Compile Include="Service\RoslynExporter\Deployment.cs" />
