Fix conflicts in-memory
I had to move some of the rule set manipulation method into a common helper (along with their tests).

--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -138,6 +138,7 @@
     <Compile Include="LocalServices\RuleConflictInfo.cs" />
     <Compile Include="LocalServices\RuleSetInspector.cs" />
     <Compile Include="Persistence\ISolutionBinding.cs" />
+    <Compile Include="RuleSetHelper.cs" />
     <Compile Include="Service\DataModel\ServerPlugin.cs" />
     <Compile Include="Service\RoslynExporter\AdditionalFile.cs" />
     <Compile Include="Service\RoslynExporter\Configuration.cs" />
