--- a/src/TestInfrastructure/TestInfrastructure.csproj
+++ b/src/TestInfrastructure/TestInfrastructure.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Framework\ConfigurableIntegrationSettings.cs" />
     <Compile Include="Framework\ConfigurableProgressStepRunner.cs" />
     <Compile Include="Framework\ConfigurableSettingsManager.cs" />
+    <Compile Include="Framework\ConfigurableSolutionRuleSetsInformationProvider.cs" />
     <Compile Include="Framework\ConfigurableSolutionRuleStore.cs" />
     <Compile Include="Framework\ConfigurableSolutionBinding.cs" />
     <Compile Include="Framework\ConfigurableSourceControlledFileSystem.cs" />
