--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -294,6 +294,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="TeamExplorer\Controllers.dgml" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\..\packages\SonarLint.1.7.0\analyzers\SonarLint.CSharp.dll" />
