--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -136,7 +136,7 @@
     <Compile Include="IHost.cs" />
     <Compile Include="IProjectSystemHelper.cs" />
     <Compile Include="IActiveSolutionTracker.cs" />
-    <Compile Include="Binding\IProjectSystemFilter.cs" />
+    <Compile Include="LocalServices\IProjectSystemFilter.cs" />
     <Compile Include="IServiceProviderExtensions.cs" />
     <Compile Include="IIntegrationSettings.cs" />
     <Compile Include="IWebBrowser.cs" />
@@ -153,7 +153,7 @@
     <Compile Include="ProfileConflicts\RuleSetConflictsController.cs" />
     <Compile Include="RuleSetHelper.cs" />
     <Compile Include="Language.cs" />
-    <Compile Include="Binding\ProjectSystemFilter.cs" />
+    <Compile Include="LocalServices\ProjectSystemFilter.cs" />
     <Compile Include="Service\DataModel\ServerPlugin.cs" />
     <Compile Include="Service\DataModel\ServerProperty.cs" />
     <Compile Include="Service\RoslynExporter\AdditionalFile.cs" />
@@ -286,6 +286,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="ArchetectureOverview.dgml" />
     <None Include="Integration.ruleset" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
