--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -112,6 +112,8 @@
   <ItemGroup>
     <Compile Include="Binding\BindingController.cs" />
     <Compile Include="Binding\IBindingOperation.cs" />
+    <Compile Include="MefServices\IInfoBar.cs" />
+    <Compile Include="MefServices\IInfoBarManager.cs" />
     <Compile Include="ProfileConflicts\FixedRuleSetInfo.cs" />
     <Compile Include="LocalServices\ILocalService.cs" />
     <Compile Include="LocalServices\IRuleSetSerializer.cs" />
