Integrated the previously reviewed components into the extension
1. Added ConflictsManager - deals with project level conflicts
and aggregation of the project rulesets so that the same rule set
will be analyzed/fixed only once.
2. Added RuleSetConflictController that exposes the conflicts to the user
and allowing to auto fix them.
3. There are various data classes that I created to abstract each layer.
4. Fixed a bug in the inspector that I found once integrated everything
(rules with None action would be considered missing).

Note: the tests for the output messages are low fidelity and focus on various
keywords that I'm expecting to find instead of the whole message (a nightmare to
maintain and you would still need to actually see the UX when changing them, so
no much point in having high fidelity tests for those).

--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -112,12 +112,18 @@
   <ItemGroup>
     <Compile Include="Binding\BindingController.cs" />
     <Compile Include="Binding\IBindingOperation.cs" />
+    <Compile Include="ProfileConflicts\FixedRuleSetInfo.cs" />
     <Compile Include="LocalServices\ILocalService.cs" />
     <Compile Include="LocalServices\IRuleSetSerializer.cs" />
     <Compile Include="Binding\ISolutionRuleStore.cs" />
     <Compile Include="Binding\ProjectBindingOperation.cs" />
     <Compile Include="Binding\ProjectBindingOperation.Writer.cs" />
     <Compile Include="Binding\RuleSetGroup.cs" />
+    <Compile Include="ProfileConflicts\ConflictsManager.cs" />
+    <Compile Include="ProfileConflicts\IConflictsManager.cs" />
+    <Compile Include="ProfileConflicts\IRuleSetConflictsController.cs" />
+    <Compile Include="ProfileConflicts\ProjectRuleSetConflict.cs" />
+    <Compile Include="ProfileConflicts\RuleSetAggregate.cs" />
     <Compile Include="LocalServices\RuleSetSerializer.cs" />
     <Compile Include="Binding\SolutionBindingOperation.cs" />
     <Compile Include="Binding\NuGetHelper.cs" />
@@ -135,15 +141,16 @@
     <Compile Include="IIntegrationSettings.cs" />
     <Compile Include="IWebBrowser.cs" />
     <Compile Include="LocalServices\IFileSystem.cs" />
-    <Compile Include="LocalServices\IRuleSetInspector.cs" />
+    <Compile Include="ProfileConflicts\IRuleSetInspector.cs" />
     <Compile Include="LocalServices\ISolutionRuleSetsInformationProvider.cs" />
     <Compile Include="LocalServices\ISourceControlledFileSystem.cs" />
-    <Compile Include="LocalServices\RuleConflictInfo.cs" />
+    <Compile Include="ProfileConflicts\RuleConflictInfo.cs" />
     <Compile Include="LocalServices\RuleSetDeclaration.cs" />
-    <Compile Include="LocalServices\RuleSetInspector.cs" />
+    <Compile Include="ProfileConflicts\RuleSetInspector.cs" />
     <Compile Include="LocalServices\SolutionRuleSetsInformationProvider.cs" />
     <Compile Include="Persistence\ISolutionBinding.cs" />
     <Compile Include="Progress\IProgressStepRunnerWrapper.cs" />
+    <Compile Include="ProfileConflicts\RuleSetConflictsController.cs" />
     <Compile Include="RuleSetHelper.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Binding\ProjectSystemFilter.cs" />
