Refactor existing code
Refactor code to support detection of unbound project that will use some of the
existing code that needed to shared with the new functionality

--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -118,7 +118,7 @@
     <Compile Include="Binding\ISolutionRuleStore.cs" />
     <Compile Include="Binding\ProjectBindingOperation.cs" />
     <Compile Include="Binding\ProjectBindingOperation.Writer.cs" />
-    <Compile Include="Binding\RuleSetGroup.cs" />
+    <Compile Include="RuleSetGroup.cs" />
     <Compile Include="ProfileConflicts\ConflictsManager.cs" />
     <Compile Include="ProfileConflicts\IConflictsManager.cs" />
     <Compile Include="ProfileConflicts\IRuleSetConflictsController.cs" />
@@ -290,7 +290,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="ArchetectureOverview.dgml" />
-    <None Include="Integration.ruleset" />
+    <None Include="Integration.ruleset">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
