--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Connection\ConnectionInformationDialogTests.cs" />
     <Compile Include="Framework\ConfigurableCredentialStore.cs" />
     <Compile Include="IServiceProviderExtensionsTests.cs" />
+    <Compile Include="LanguageTests.cs" />
     <Compile Include="LocalServices\RuleSetInspectorTests.cs" />
     <Compile Include="LocalServices\SolutionRuleSetsInformationProviderTests.cs" />
     <Compile Include="LocalServices\SourceControlledFileSystemTests.cs" />
