--- a/src/Integration.Vsix.UnitTests/packages.config
+++ b/src/Integration.Vsix.UnitTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.0.0" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.27" targetFramework="net46" />
   <package id="SonarLint" version="1.7.0" targetFramework="net452" developmentDependency="true" />
   <package id="System.Collections" version="4.0.0" targetFramework="net46" />
