Support vs/core/extension/used telemetry in addition to vs/command/core
+ Fix double entry for browse commands

--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -75,6 +75,7 @@
     <Compile Include="..\AssemblyInfo.Shared.cs" />
     <Compile Include="SonarLintIntegrationPackage.cs" />
     <Compile Include="BoundSolutionAnalyzer.cs" />
+    <Compile Include="Telemetry\SonarLintIntegrationPackage.IOleCommandTarget.cs" />
     <Compile Include="Telemetry\TelemetryLogger.cs" />
   </ItemGroup>
   <ItemGroup>
