[SVS-78] Fix issue with request URL construction
When the request Uri was being constructed, the presence of the leading slash on the API URI paths forced the path to be relative to the root of the base address (the hostname).



Strengthened against inconsistencies with leading & trailing slashes when combining Uri parts.

--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -171,6 +171,7 @@
     <Compile Include="TeamExplorer\SonarQubePageTests.cs" />
     <Compile Include="TeamExplorer\TeamExplorerControllerTests.cs" />
     <Compile Include="TelemetryLoggerAccessorTests.cs" />
+    <Compile Include="UriExtensionsTests.cs" />
     <Compile Include="VsSessionHostTests.cs" />
     <Compile Include="VsShellUtilsTests.cs" />
     <Compile Include="WPF\BoolToVisibilityConverterTests.cs" />
