--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -215,6 +215,7 @@
     <Compile Include="ActiveSolutionTracker.cs" />
     <Compile Include="TeamExplorer\ISectionController.cs" />
     <Compile Include="TelemetryLoggerAccessor.cs" />
+    <Compile Include="UriExtensions.cs" />
     <Compile Include="VsSessionHost.cs" />
     <Compile Include="WebBrowser.cs" />
     <Compile Include="WPF\ContextualCommandsCollection.cs" />
