--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -136,10 +136,13 @@
     <Compile Include="Connection\ConnectionInformationDialogTests.cs" />
     <Compile Include="Framework\ConfigurableCredentialStore.cs" />
     <Compile Include="IServiceProviderExtensionsTests.cs" />
+    <Compile Include="LocalServices\RuleSetSerializerTests.cs" />
     <Compile Include="ProfileConflicts\ConflictsManagerTests.cs" />
     <Compile Include="ProfileConflicts\FixedRuleSetInfoTests.cs" />
     <Compile Include="ProfileConflicts\RuleConflictInfoTests.cs" />
+    <Compile Include="ProfileConflicts\ProjectRuleSetConflictTests.cs" />
     <Compile Include="ProfileConflicts\RuleSetConflictsControllerTests.cs" />
+    <Compile Include="ProfileConflicts\RuleSetInformationTests.cs" />
     <Compile Include="ProfileConflicts\RuleSetInspectorTests.cs" />
     <Compile Include="LanguageTests.cs" />
     <Compile Include="LocalServices\SolutionRuleSetsInformationProviderTests.cs" />
