Add test coverage for various components to meet quality gate (#55)
Add test coverage for various classes
 - Language.ForProject
 - ConnectionInformation.Ctor
 - SectionController
 - SonarQubeServiceWrapper
 - SolutionBindingOperation
 - SolutionRuleSetsInformationProvider
 - Various (null arg checks)

--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -137,6 +137,8 @@
     <Compile Include="Framework\ConfigurableCredentialStore.cs" />
     <Compile Include="IServiceProviderExtensionsTests.cs" />
     <Compile Include="ProfileConflicts\ConflictsManagerTests.cs" />
+    <Compile Include="ProfileConflicts\FixedRuleSetInfoTests.cs" />
+    <Compile Include="ProfileConflicts\RuleConflictInfoTests.cs" />
     <Compile Include="ProfileConflicts\RuleSetConflictsControllerTests.cs" />
     <Compile Include="ProfileConflicts\RuleSetInspectorTests.cs" />
     <Compile Include="LanguageTests.cs" />
