--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -134,7 +134,7 @@
     <Compile Include="Binding\IBindingWorkflowExecutor.cs" />
     <Compile Include="HostedCommandControllerBase.cs" />
     <Compile Include="IHost.cs" />
-    <Compile Include="IProjectSystemHelper.cs" />
+    <Compile Include="LocalServices\IProjectSystemHelper.cs" />
     <Compile Include="IActiveSolutionTracker.cs" />
     <Compile Include="LocalServices\IProjectSystemFilter.cs" />
     <Compile Include="IServiceProviderExtensions.cs" />
