[Technical] Fix technical issues found when exploring the current state of the extension (#56)
* Fix technical issues found when exploring the current state

1. Remove direct interface dependencies between services
2. Properly host the service using IServiceContainer + add tests
3. Suppress critical issues which are false positives
4. Fix non-critical issues found along the way
5. Fix a few test holes which I noticed when I updated the tests.

* Move file into the LocalServices folder

* Correct doc comments

* Address Duncan's comments

--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -134,7 +134,7 @@
     <Compile Include="Binding\IBindingWorkflowExecutor.cs" />
     <Compile Include="HostedCommandControllerBase.cs" />
     <Compile Include="IHost.cs" />
-    <Compile Include="IProjectSystemHelper.cs" />
+    <Compile Include="LocalServices\IProjectSystemHelper.cs" />
     <Compile Include="IActiveSolutionTracker.cs" />
     <Compile Include="LocalServices\IProjectSystemFilter.cs" />
     <Compile Include="IServiceProviderExtensions.cs" />
@@ -294,6 +294,7 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="TeamExplorer\Controllers.dgml" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\..\packages\SonarLint.1.7.0\analyzers\SonarLint.CSharp.dll" />
