--- a/src/Integration/packages.config
+++ b/src/Integration/packages.config
@@ -3,4 +3,5 @@
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.20.301151232" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net452" />
+  <package id="SonarAnalyzer.CSharp" version="1.10.0" targetFramework="net46" developmentDependency="true" />
 </packages>
