--- a/src/Integration.UnitTests/packages.config
+++ b/src/Integration.UnitTests/packages.config
@@ -10,4 +10,5 @@
   <package id="NuGet.Versioning" version="3.3.0" targetFramework="net452" />
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="SonarAnalyzer.CSharp" version="1.10.0" targetFramework="net46" developmentDependency="true" />
 </packages>
